chore: fix layout issues on mobile devices for the landing page

--- a/src/components/Herosection.css
+++ b/src/components/Herosection.css
@@ -6,7 +6,6 @@
 }
 
 .hero-section {
-  border: 2px solid black;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -48,8 +47,6 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-
-  /* border: 2px solid black; */
   width: 30%;
   height: 100%;
 }
@@ -83,6 +80,7 @@
   }
 
   .hero-section-left {
+    justify-content: flex-start;
     width: 90%;
     margin: auto;
     align-items: center;
@@ -92,6 +90,6 @@
     padding: 1rem;
   }
   .hero-image {
-    padding: 1rem;
+    padding: 2rem;
   }
 }
